2002-02-01  Andy Piper <andy.piper@freeuk.com>

	* HACKING: added info on submitting patches

2002-01-31  Johannes Schmid <clubfan@users.sourceforge.net>

	* src/project_import_gui.c, src/project_import.c:
	  - If Project Import Wizard is canceled everything is 
		cleaned up now.
	  - Back button is now insensitive on page 3 (some problems: 
		see TODO in project_import_qui.c:284
	  - Menu frame is insensitive if project type != GNOME(mm)

2002-01-31  Naba Kumar <kh_naba@users.sourceforge.net>

	* src/main.c: Fixed bug #  (Unable to open files on
	double click in project window from second trial onwards when
	the project is opened from command line).
	
	* po/POTFILES.in: Removed tags_manager.[h,c]
	
2002-01-31  Naba Kumar <kh_naba@users.sourceforge.net>

	* src/preferences.c:
	  A quick hack to fix the 'invisible' browser toolbar when
	  upgrading from 0.1.8 to 0.1.9
	  
	* src/anjuta.c:
	  Fixed toolbar names which were causing confusions in the toolbar
	  show/hide.
	  
	* src/main.c:
	  Substituted "anjuta" with PACKAGE
	  
	* src/project_import_gui.c: 
	  Consistensy: wm_class should be set with "Anjuta" and not "anjuta"
	  
	* anjuta.prj, src/tags_manager.h, src/tags_manger.c:
	  Added new files and removed obsolete ones.
	  
2002-01-30  Andy Piper <andy.piper@freeuk.com>

	* src/appwizard_cbs.c, project_import_cbs.c, 
	  main_menubar_def.h, project_import_gui.c: 
	  updates to message strings and layout for the 
	  import wizard.
	  
	* text_editor_cbs.c: fix for the tab menu entries for 
	  redocked windows (Dan Elphick <dre00r@ecs.soton.ac.uk>)

2002-01-30  Naba Kumar <kh_naba@users.sourceforge.net>

	* src/toolbars.c,
	  src/toolbars.h,
	  src/anjuta_gui.c,
	  src/controls.c:
	  
	  Tag dropdown exclusive (takes
	  all space in the toolbar) and never vertical and
	  increased the width of the tag combo to 256 pixs.
	  Toolbar separator before the combo and button.
	  Added tags label before the tag button.
	  Reorganized the dock bands for the toolbars.